# my-zero-to-prod-exercises

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json  tree.txt
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230117164833_create_subscription_tokens_table.sql  20230130164354_create_users_table.sql  20230205145236_seed_user.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
