[package]
name = "my-zero-to-prod-exercises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name="zero2prod"

[[bin]]
path = "src/main.rs"
name = "my-zero-to-prod-exercises"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1.10"
validator = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","cookies"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.13" # breaking changes in 0.20+
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
urlencoding = "2"
hex = "0.4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
## offline feature needed to build sqlx without syntax checking (without requiring database) in docker buidl
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claims = "0.7"
fake = "2.5"
linkify = "0.9"
once_cell = "1.16"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
